# projviz

./: .gitignore  LICENSE  Makefile  README.md  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
src/projviz/: __init__.py  cli.py  framework_detection.py  scanner.py  server.py
src/projviz/templates/: base.html  diagram.html  tree.html  uml.html
tests/: __init__.py  test_cli.py  test_frameworks.py  test_scanner.py
