[build-system]
requires = ["uv >= 0.1.0", "setuptools >= 65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projviz"
version = "0.1.0"
description = "Python project structure visualizer with interactive diagrams"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click >= 8.0.0",
    "fastapi >= 0.68.0",
    "uvicorn >= 0.15.0",
    "jinja2 >= 3.0.0"
]

[project.scripts]
projviz = "projviz.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest >= 7.0.0",
    "black >= 22.0.0",
    "mypy >= 0.910",
    "projviz",
]

[tool.uv.sources]
projviz = { workspace = true }
